--- a/_posts/2020-01-03-the-us-narrative-today.html
+++ b/_posts/2020-01-03-the-us-narrative-today.html
@@ -1592,107 +1592,107 @@ stories:
   domain: http://www.fredericknewspost.com/
   link: https://www.fredericknewspost.com/obituaries/keeney-basford-funeral-home/image_c7f62c7b-77e2-56f9-ae6a-88335d82096a.html
 images:
-- name: birdhouse-birdhouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-sand-paper.jpg
-- name: rain-princess-abandoned-church-far.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-abandoned-church-far.jpg
-- name: adam-smith-adam-smith-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-sunday.jpg
-- name: white-house-lawn-white-house-lawn-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-brush.jpg
-- name: catacombs-catacombs-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-smooth-ride.jpg
-- name: art-museum-art-museum-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-mucha-mult.jpg
-- name: bordercrossing-bordercrossing-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purple-storm.jpg
-- name: san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
-- name: border-crossing-bordercrossing-post-modern.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-post-modern.png
-- name: oldtrain-oldtrain-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sand-paper.jpg
-- name: aws-s3-canyon-canyon-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still.jpg
-- name: bf-skinner-cemetery_36690406946_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cemetery_36690406946_o.jpg
-- name: nazi-invasion-cross-against-trees.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-cross-against-trees.jpg
-- name: oldhotel-oldhotel-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-bright-sand.jpg
-- name: catacombs-catacombs-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-copper-circuit-2.jpg
-- name: oldhouse-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-atari-missle.jpg
-- name: nazi-invasion-memorial-to-the-jews-in-berlin-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-memorial-to-the-jews-in-berlin-2.jpg
-- name: copper-circuit-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cruise-ship-shore-log.jpg
-- name: locked-up-steam-lock-up-steam-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-feed-people.jpg
-- name: dragon-desert-desert-dragon-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-sand-paper.jpg
-- name: old-door-lock-old-door-lock-2-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-granite.jpg
-- name: stalin-time-destruction-seattle-viaduct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-destruction-seattle-viaduct.jpg
-- name: amusement-park-amusement-park-2-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-china-prop.jpg
-- name: nazi-invasion-train-car_35892468014_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-car_35892468014_o.jpg
-- name: stalin-time-border-fence-down-the-line-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-fence-down-the-line-2.jpg
-- name: oldhousecars-house-old-cars-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-smooth-ride.jpg
-- name: christianity-christianity-under-construction-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-electricity.jpg
-- name: copper-circuit-dark-hallway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-hallway.jpg
-- name: downtown-los-angeles-downtown-la-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-free-woman.JPG
-- name: bf-skinner-building-shadows-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-building-shadows-sun.jpg
-- name: ellis-island-ellisisland-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-neo-instinct.jpg
-- name: powerlines-power-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-smooth-ride.jpg
-- name: bordercrossing-bordercrossing-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-creativity.jpg
-- name: yosemite-yosemite-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-satan-red.jpg
-- name: school-clouds-church-clouds-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-plentiful.jpg
-- name: oldtrain-oldtrain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-aqua.jpg
-- name: bordercrossing-bordercrossing-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smoking-cigarette.jpg
-- name: miamibeach-miamibeach-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-marcel-duchamp.jpg
-- name: beach-rocks-beach-rocks-currents-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dark-soul.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit-3.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit-3.JPG
-- name: aws-s3-square-statue-face-open-mouth-copper-circuit-square.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-statue-face-open-mouth-copper-circuit-square.png
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-collage.jpg
-- name: server-cloud-server-racks-clouds-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-ww2-color.jpg
-- name: downtown-trucksilo-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-graham-sutherland.jpg
-- name: mistywoods-babyfoot-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-alien-goggles.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-colored-circuits.jpg
-- name: trucksilo-trucksilo-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colorful-blocks.jpg
-- name: wind-mills-windmills-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-atari-asteroids.jpg
-- name: nazi-invasion-firetruck-bright-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-firetruck-bright-sun.jpg
-- name: oldtrain-oldtrain-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-space-pizza.jpg
-- name: stories-new-van-gogh-starry-night-container-bridge-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-van-gogh-starry-night-container-bridge-2.jpg
+- name: yuma-bank-yuma-bak-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-brush.jpg
+- name: powerlines-power-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-smoking-cigarette.jpg
+- name: oldbarn-oldbarn-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-alien-goggles.jpg
+- name: aws-s3-desertrun-desertrun-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still.jpg
+- name: mosaic-face-mosaic-face-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-constitution.jpg
+- name: nazi-invasion-border-watching-cars.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-border-watching-cars.jpg
+- name: paris-paris-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-gan-vogh.jpg
+- name: bluelake-oily-mcoilface-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-00-00.jpg
+- name: white-house-whitehouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-aqua.jpg
+- name: dragon-desert-desert-dragon-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-nazi-poster.jpg
+- name: flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
+- name: lincoln-memorial-lincolnmemorial-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-pond.jpg
+- name: old-school-house-old-schoolhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-matrix.jpg
+- name: server-cloud-server-racks-door-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-graham-sutherland.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-kand-two.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-kand-two.png
+- name: aws-s3-stories-raven-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-raven-fence.jpg
+- name: san-francisco-street-view-san-francisco-street-view-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-far-away.jpg
+- name: ellis-island-ellis-island-room-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gan-vogh.jpg
+- name: nazi-invasion-IMG_7831.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7831.jpg
+- name: school-clouds-church-clouds-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-green-zuma.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
+- name: old-barn-old-barn-1500-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-oily-mcoilface.jpg
+- name: old-barn-old-barn-1500-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crabapple.jpg
+- name: crow_colorful_blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_blocks.jpg
+- name: art-museum-art-museum-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-plentiful.jpg
+- name: fence-fence-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-yellow-collage.jpg
+- name: abe-lincoln-one-satan-red-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-satan-red-file-00-00-00-00.jpg
+- name: server-cloud1-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-propaganda-leaflets.jpg
+- name: christianity-christianity-under-construction-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-mucha-mult.jpg
+- name: old-door-lock-old-door-lock-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-umberto-bocc.jpg
+- name: berlinwall-DSC-0084-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-hot-spicy.jpg
+- name: white-house-lawn-white-house-lawn-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alberto-giacometti.jpg
+- name: rain-princess-construction-crane-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-construction-crane-city.jpg
+- name: adam-smith-adam-smith-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-alien-goggles.jpg
+- name: stalin-time-volkswagon-microbus-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-volkswagon-microbus-windows.jpg
+- name: bf-skinner-times-square-up-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-times-square-up-road.jpg
+- name: gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
+- name: crow_kand_two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_kand_two.jpg
+- name: nazi-invasion-down-the-line-harlem.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-down-the-line-harlem.jpg
+- name: docks-docks-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-purp-paper.jpg
+- name: downtown-los-angeles-downtown-la-pablo-blue.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-pablo-blue.JPG
+- name: white-house-lawn-white-house-window-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-matrix.jpg
+- name: la-muse-hollywood-sign-with-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hollywood-sign-with-tower.jpg
+- name: oldhouse-granaryfield-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-color.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-sand-paper.jpg
+- name: bordercrossing-bordercrossing-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-deep-connections.jpg
+- name: cannon-facing-cannon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon.jpg
+- name: nazi-invasion-jesus-in-old-rock-church.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-jesus-in-old-rock-church.jpg
+- name: crow-crow-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dark-rain.jpg
+- name: bordercrossing-bordercrossing-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-space-pizza.jpg
 ---
 Hoosiers Falter Late In Gator Bowl Loss.&nbsp;Prairie View Looks To Extend Streak Vs Alcorn State.&nbsp;New Practice Blends Modern, Ancient Healing.&nbsp;Germany Arrests Suspected Member Of Kurdish Militant Group.&nbsp;What Are Your New Years Resolutions?.&nbsp;Sheriff Hit By New Year's Gunfire, Bounced Off Flak Jacket.&nbsp;Electric Moped Rental Fleet Hits Miamis Streets.&nbsp;Man Charged With Trafficking Marijuana.&nbsp;
