--- a/_posts/2020-01-03-the-us-narrative-today.html
+++ b/_posts/2020-01-03-the-us-narrative-today.html
@@ -1592,107 +1592,107 @@ stories:
   domain: http://www.fredericknewspost.com/
   link: https://www.fredericknewspost.com/obituaries/keeney-basford-funeral-home/image_c7f62c7b-77e2-56f9-ae6a-88335d82096a.html
 images:
-- name: yuma-bank-yuma-bak-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-brush.jpg
-- name: powerlines-power-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-smoking-cigarette.jpg
-- name: oldbarn-oldbarn-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-alien-goggles.jpg
-- name: aws-s3-desertrun-desertrun-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still.jpg
-- name: mosaic-face-mosaic-face-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-constitution.jpg
-- name: nazi-invasion-border-watching-cars.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-border-watching-cars.jpg
-- name: paris-paris-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-gan-vogh.jpg
-- name: bluelake-oily-mcoilface-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-00-00.jpg
-- name: white-house-whitehouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-aqua.jpg
-- name: dragon-desert-desert-dragon-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-nazi-poster.jpg
-- name: flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
-- name: lincoln-memorial-lincolnmemorial-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-pond.jpg
-- name: old-school-house-old-schoolhouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-matrix.jpg
-- name: server-cloud-server-racks-door-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-graham-sutherland.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-kand-two.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-kand-two.png
-- name: aws-s3-stories-raven-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-raven-fence.jpg
-- name: san-francisco-street-view-san-francisco-street-view-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-far-away.jpg
-- name: ellis-island-ellis-island-room-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gan-vogh.jpg
-- name: nazi-invasion-IMG_7831.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7831.jpg
-- name: school-clouds-church-clouds-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-green-zuma.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
-- name: old-barn-old-barn-1500-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-oily-mcoilface.jpg
-- name: old-barn-old-barn-1500-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crabapple.jpg
-- name: crow_colorful_blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_blocks.jpg
-- name: art-museum-art-museum-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-plentiful.jpg
-- name: fence-fence-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-yellow-collage.jpg
-- name: abe-lincoln-one-satan-red-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-satan-red-file-00-00-00-00.jpg
-- name: server-cloud1-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-propaganda-leaflets.jpg
-- name: christianity-christianity-under-construction-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-mucha-mult.jpg
-- name: old-door-lock-old-door-lock-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-umberto-bocc.jpg
-- name: berlinwall-DSC-0084-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-hot-spicy.jpg
-- name: white-house-lawn-white-house-lawn-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alberto-giacometti.jpg
-- name: rain-princess-construction-crane-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-construction-crane-city.jpg
-- name: adam-smith-adam-smith-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-alien-goggles.jpg
-- name: stalin-time-volkswagon-microbus-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-volkswagon-microbus-windows.jpg
-- name: bf-skinner-times-square-up-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-times-square-up-road.jpg
-- name: gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
-- name: crow_kand_two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_kand_two.jpg
-- name: nazi-invasion-down-the-line-harlem.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-down-the-line-harlem.jpg
-- name: docks-docks-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-purp-paper.jpg
-- name: downtown-los-angeles-downtown-la-pablo-blue.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-pablo-blue.JPG
-- name: white-house-lawn-white-house-window-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-matrix.jpg
-- name: la-muse-hollywood-sign-with-tower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hollywood-sign-with-tower.jpg
-- name: oldhouse-granaryfield-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-color.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-sand-paper.jpg
-- name: bordercrossing-bordercrossing-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-deep-connections.jpg
-- name: cannon-facing-cannon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon.jpg
-- name: nazi-invasion-jesus-in-old-rock-church.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-jesus-in-old-rock-church.jpg
-- name: crow-crow-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dark-rain.jpg
-- name: bordercrossing-bordercrossing-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-space-pizza.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-deep-connections.jpg
+- name: cargo-ship-cargo-ship-on-sea-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dali-three.jpg
+- name: abandonedbuildings_nazi_poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_nazi_poster.jpg
+- name: old-gas-pumps-oldgaspumps-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-yellow-collage.jpg
+- name: la-muse-building-shadows-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-building-shadows-sun.jpg
+- name: border-fence-border-fence-on-hill-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-colorful-blocks.jpg
+- name: razorwire-DSC-0080-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-post-modern.jpg
+- name: art-museum-art-museum-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-marcel-duchamp.jpg
+- name: border-crossing-bordercrossing-dry-skin.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dry-skin.png
+- name: rain-princess-IMG_6945.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6945.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
+- name: razorcliff-razorcliff-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-sunday.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-cinnamon-rolls.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-cinnamon-rolls.png
+- name: nazi-invasion-underground-subway_35929749683_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-underground-subway_35929749683_o.jpg
+- name: bf-skinner-please-do-not-feed-the-pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-please-do-not-feed-the-pigeon.jpg
+- name: legal-statue-legalstatue-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-creativity.jpg
+- name: docks-docks-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-smooth-ride.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-space-pizza.jpg
+- name: carry-load-carryload-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crafty-painting.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-oily-mcoilface.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-oily-mcoilface.JPG
+- name: oldcabin-oldcabin-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crunch-paper.jpg
+- name: nyc-flag-nycflag-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colored-circuits.jpg
+- name: blossombar-creativity-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-50-62.jpg
+- name: cannon-facing-cannon-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-copper-circuit.jpg
+- name: downtheline-downtheline-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-plentiful.jpg
+- name: mediterranean-mediterranean-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purple-pond.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-yellow-collage.jpg
+- name: art-museum-art-museum-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-3.jpg
+- name: status-berlin-status-berlin-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-jap-wav-pr.jpg
+- name: art-museum-art-museum-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-sunday.jpg
+- name: legal-statue-legalstatue-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-two.jpg
+- name: downtown-los-angeles-downtown-la-green-zuma.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-green-zuma.JPG
+- name: amusement-park-amusement-park-2-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-purple-pond.jpg
+- name: scream-DSC_0115.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0115.jpg
+- name: oldsmallboat-oldsmallboat-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-electricity.jpg
+- name: san-francisco-street-view-san-francisco-street-view-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-neo-instinct.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-satan-red.jpg
+- name: blossombar-hot-spicy-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-00-00.jpg
+- name: aws-s3-stories-umberto-boccioni-dynamism-of-a-soccer-player-angel-statue-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-umberto-boccioni-dynamism-of-a-soccer-player-angel-statue-1.jpg
+- name: castle-wall-DSC-0067-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-alberto-giacometti.JPG
+- name: abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+- name: bf-skinner-working-on-railroad-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-on-railroad-2.jpg
+- name: trucksilo-trucksilo-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-mucha-mult.jpg
+- name: downtheline-downtheline-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-spagetti-accident.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-atari-asteroids.jpg
+- name: rockingchair-rockingchair-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-green-zuma.jpg
+- name: capital-battle-capitolbattle-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-three.jpg
+- name: beach-rocks-beach-rocks-currents-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-gan-vogh.jpg
+- name: power-lines-power-lines-empty-space-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kandinsky-bv.jpg
+- name: oldroad-old-road-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-purple-storm.jpg
+- name: oldroad-old-road-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-circuit.jpg
 ---
 Hoosiers Falter Late In Gator Bowl Loss.&nbsp;Prairie View Looks To Extend Streak Vs Alcorn State.&nbsp;New Practice Blends Modern, Ancient Healing.&nbsp;Germany Arrests Suspected Member Of Kurdish Militant Group.&nbsp;What Are Your New Years Resolutions?.&nbsp;Sheriff Hit By New Year's Gunfire, Bounced Off Flak Jacket.&nbsp;Electric Moped Rental Fleet Hits Miamis Streets.&nbsp;Man Charged With Trafficking Marijuana.&nbsp;
